compiler-core/src/package_interface/snapshots/glistix_core__package_interface__tests__imported_aliased_type_keeps_original_name.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\nimport other_module.{type Element as Alias} as module_alias\npub fn main() -> Alias(module_alias.Element(a)) {}\n"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {},
      "constants": {},
      "functions": {
        "main": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "uses-nix-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true,
            "can-run-on-nix": true
          },
          "parameters": [],
          "return": {
            "kind": "named",
            "name": "Element",
            "package": "other_package",
            "module": "other_module",
            "parameters": [
              {
                "kind": "named",
                "name": "Element",
                "package": "other_package",
                "module": "other_module",
                "parameters": [
                  {
                    "kind": "variable",
                    "id": 0
                  }
                ]
              }
            ]
          }
        }
      }
    }
  }
}
